# Knowledger

./: .gitignore  README.md  app.py  main.py  pyproject.toml  run_app.py  sample_podcast_script.json
src/audio_processing/: audio_transcriber.py  youtube_transcriber.py
src/doc/: doc_processor.py
src/embeddings/: embedding_generator.py
src/generation/: rag.py  rag_mistral.py
src/memory/: memory_layer.py
src/podcast/: script_generator.py  text_to_speech.py
src/vector_db/: chroma_vector_db.py  chroma_vectordb.py  milvus_vector_db.py  qdrant_vector_db.py
src/web_scraping/: web_scraping.py
test/: notebook_pipeline.py
